<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/uni"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/searchbr"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/search_bar"
            android:drawableStart="@drawable/baseline_search_24"
            android:drawablePadding="9dp"
            android:fontFamily="@font/tinos"
            android:hint="@string/search_recipes"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/myRecipeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/tinos"
            android:text="@string/my_recipes"
            android:textColor="@color/black"
            android:textSize="35sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchbr" />

        <ImageButton
            android:id="@+id/myRecipesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="208dp"
            android:layout_marginEnd="8dp"
            android:background="@color/white"
            android:src="@drawable/baseline_arrow_forward_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/settingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="148dp"
            android:layout_marginTop="340dp"
            android:fontFamily="@font/tinos"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="35sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="351dp"
            android:layout_height="257dp"
            android:layout_marginTop="17dp"
            android:background="@drawable/rounded_rectangle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settingTitle" />

        <TextView
            android:id="@+id/unitsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/tinos"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/units"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

        <Switch
            android:id="@+id/metric_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="132dp"
            android:layout_marginTop="40dp"
            android:text="Metric"
            app:layout_constraintStart_toEndOf="@+id/unitsTitle"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

        <Button
            android:id="@+id/editAccount"
            android:layout_width="201dp"
            android:layout_height="38dp"
            android:layout_marginStart="104dp"
            android:layout_marginBottom="64dp"
            android:fontFamily="@font/tinos"
            android:textColor="@color/black"
            android:text="Edit Account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>