<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView10"
            android:layout_width="152dp"
            android:layout_height="129dp"
            android:layout_marginTop="17dp"
            android:layout_marginBottom="120dp"
            android:background="@drawable/rounded_rectangle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settingTitle" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="179dp"
            android:layout_height="102dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/burger"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_of_day_title" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="146dp"
            android:layout_height="115dp"
            android:layout_marginTop="17dp"
            android:layout_marginBottom="372dp"
            android:background="@drawable/rounded_rectangle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.066"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settingTitle" />

        <EditText
            android:id="@+id/searchbr"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:layout_marginStart="58dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/search_bar"
            android:drawableStart="@drawable/baseline_search_24"
            android:drawablePadding="9dp"
            android:fontFamily="@font/tinos"
            android:hint="@string/search_recipes"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/recentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="115dp"
            android:fontFamily="@font/tinos"
            android:text="@string/recent"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchbr" />

        <TextView
            android:id="@+id/time_of_day_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="200dp"
            android:fontFamily="@font/tinos"
            android:text="@string/time_of_day_receipt"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recentTitle" />

        <ImageButton
            android:id="@+id/breakfast_botton"
            android:layout_width="72dp"
            android:layout_height="70dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/breakfest"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchbr"
             />

        <TextView
            android:id="@+id/breakfastText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="136dp"
            android:fontFamily="@font/tinos"
            android:text="@string/breakfast"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/lunch_botton"
            android:layout_width="74dp"
            android:layout_height="70dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/lunch"
            app:layout_constraintStart_toEndOf="@+id/breakfast_botton"
            app:layout_constraintTop_toBottomOf="@+id/searchbr" />

        <TextView
            android:id="@+id/lunchText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:fontFamily="@font/tinos"
            android:text="@string/lunch"
            app:layout_constraintStart_toEndOf="@+id/breakfastText"
            app:layout_constraintTop_toBottomOf="@+id/lunch_botton" />

        <ImageButton
            android:id="@+id/dinner_botton"
            android:layout_width="75dp"
            android:layout_height="70dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/dinner"
            app:layout_constraintStart_toEndOf="@+id/lunch_botton"
            app:layout_constraintTop_toBottomOf="@+id/searchbr" />

        <TextView
            android:id="@+id/dinnerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/tinos"
            android:text="@string/dinner"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/lunchText"
            app:layout_constraintTop_toBottomOf="@+id/dinner_botton" />

        <ImageButton
            android:id="@+id/snacks_button"
            android:layout_width="71dp"
            android:layout_height="70dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/snacks"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/dinner_botton"
            app:layout_constraintTop_toBottomOf="@+id/searchbr" />

        <TextView
            android:id="@+id/snackText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/tinos"
            android:text="@string/snacks"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/dinnerText"
            app:layout_constraintTop_toBottomOf="@+id/snacks_button" />

        <ImageButton
            android:id="@+id/recent_more_botton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="272dp"
            android:background="@color/white"
            android:src="@drawable/baseline_arrow_forward_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.955"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/time_of_day_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="215dp"
            android:background="@color/white"
            android:src="@drawable/baseline_arrow_forward_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.955"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recent_more_botton"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="150dp"
            android:layout_height="96dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/burger"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recentTitle" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"
            android:text="Cheese Burger"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="Cook Time: 20 Mintes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="Cheese Burger"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="19dp"
            android:text="Cook Time: 20 Minutes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>